Fixed: reduced portfolio image size on small screens to fix side scroll issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,14 +6,14 @@ body {
     background-color: rgba(121, 180, 183);
 }
 
-/* ----------------------------------------------- Colours -----*/
+/* ------------- Site wide  ----------- Colours */
 
 .site-colour {
     background-color: rgba(121, 180, 183);
 }
 
 .contrast-panel {
-    background: rgba(60,60,60, 0.1);
+    background: rgba(60, 60, 60, 0.1);
     padding-bottom: 20px;
     margin-bottom: 25px;
     border-radius: 8px;
@@ -48,7 +48,7 @@ body {
     color: #3c5a99;
 }
 
-/* ----------------------------------------------- Special paddings/margins/text -----*/
+/* ------------- Site wide  ----------- Special paddings/margins/text -----*/
 
 h1,
 h2,
@@ -79,17 +79,17 @@ h3 {
 h5 {
     font-size: 14px;
     color: #f8f0df;
-    ;
 }
 
 p {
     font-size: 15px;
     font-weight: 200;
-    
 }
- .col {
+
+.col {
     padding-right: 15px;
-    padding-left: 15px;}
+    padding-left: 15px;
+}
 
 .uppercase {
     text-transform: uppercase;
@@ -105,7 +105,7 @@ p {
     text-align: center;
 }
 
-/* ----------------------------------------------- Header -----*/
+/* ------------- Site wide  ----------- Header */
 
 .name-inner {
     text-transform: uppercase;
@@ -162,13 +162,13 @@ p {
     letter-spacing: 3px;
 }
 
-/* ----------------------------------------------- Hover.css -----*/
+/* ------------- Site wide  ----------- Hover.css */
 
 .hvr-underline-from-center:before {
     background-color: rgba(0, 0, 0, 0.3);
 }
 
-/* ----------------------------------------------- Footer -----*/
+/* ------------- Site wide  ----------- Footer */
 
 footer {
     background-color: #3b3b38;
@@ -190,7 +190,7 @@ footer p {
     width: 100px;
 }
 
-/* ----------------------------------------------- Media Queries -----*/
+/* ------------- Media Queries  ----------- Make main graphic disapear on screens smaller than 768px -----*/
 
 @media only screen and (min-width: 768px) {
     .name-outer {
@@ -217,8 +217,6 @@ footer p {
         height: 100%;
     }
 
-
-
     .header-wallpaper {
         background: url("../images/header-wallpaper.png");
         background-repeat: repeat-x;
@@ -228,10 +226,28 @@ footer p {
         margin: -16px auto 9px auto;
     }
 
-
+    .portfolio>img {
+        width: 350px;
+        height: 228px;
+    }
 }
-/* ----------- Everything except Mobile size screen -----*/
-@media only screen and (min-width: 576px) { 
+
+/* ------------- Media Queries  ----------- Handle main graphic alignment on screens below 768px */
+
+@media only screen and (max-width: 768px) {
+    #graphic {
+        margin: -7px auto 9px auto;
+    }
+
+    .portfolio>img {
+        width: 252px;
+        height: 171px;
+    }
+}
+
+/* ------------- Media Queries  ----------- Everything except Mobile size screen */
+
+@media only screen and (min-width: 576px) {
 
     .index-wallpaper {
         background: url("../images/index-bg.png");
@@ -253,24 +269,18 @@ footer p {
         padding-bottom: 4px;
     }
 
-   
-
-    
-    }
-
-    /* ----------- Mobile only  -----*/
-
-    @media only screen and (max-width: 576px) { 
-.mobile-content-section {
-    background-color: #f8f0df;
 }
+
+/* ------------- Media Queries  ----------- Mobile only */
+
+@media only screen and (max-width: 576px) {
+    .mobile-content-section {
+        background-color: #f8f0df;
     }
-    @media only screen and (max-width: 768px) {
-#graphic {
-        margin: -7px auto 9px auto;
-    }
+
 }
-/* ----------------------------------------------- Landing Page talking character -----*/
+
+/* ------------- index.html ----------- talking character */
 
 #graphic {
     width: 558px;
@@ -299,8 +309,76 @@ footer p {
     background-repeat: no-repeat;
 }
 
+/* ------------- resume.html ----------- skills section */
 
-/* ----------------------------------------------- Personal Info -----*/
+.skill {
+    text-align: center;
+    display: inline-block;
+    padding: 20px;
+}
+
+.skill>img {
+    width: 80px;
+    height: 80px;
+}
+
+/* ------------- resume.html ------------ Work History */
+
+.timeline-item {
+    padding: 3em 2em 0em 2em;
+    position: relative;
+    color: #3b3b38;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0px 12px;
+    margin: 0;
+    font-size: 14px;
+}
+
+.timeline-item h3 {
+    padding-bottom: 10px;
+}
+
+.timeline-item:before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 2em;
+    display: block;
+    font-weight: 600;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 30px;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background: #3b3b38;
+}
+
+.history-items {
+    margin-bottom: 30px;
+}
+
+
+/* ------------- portfolio.html ------------ Portfolio section */
+
+.portfolio {
+    text-align: center;
+    display: inline-block;
+    padding: 20px;
+}
+
+/* ------------- contact.html ------------ Personal Info */
 
 .personal-info-item {
     margin-bottom: 24px;
@@ -336,12 +414,12 @@ footer p {
     width: 65%;
 }
 
-/* ----------------------------------------------- Contact Form -----*/
+/* ------------- contact.html ------------ Contact Form */
 
 .contact-form {
     margin-top: 150px;
     color: #fff;
-    background: rgba(60,60,60, 0.6);
+    background: rgba(60, 60, 60, 0.6);
     width: 400px;
     position: absolute;
     left: 10%;
@@ -411,80 +489,4 @@ button[type="submit"] {
     font-weight: 500;
     width: 40%;
     background-color: rgb(95, 142, 145);
-}
-
-/* ------------------------------------ Work History */
-
-
-.timeline-item {
-    padding: 3em 2em 0em 2em;
-    position: relative;
-    color: #3b3b38;
-    border-left: 1px solid;
-}
-
-.timeline-item p {
-    padding: 0px 12px;
-    margin: 0;
-    font-size: 14px;
-}
-
-.timeline-item h3 {
-    padding-bottom: 10px;
-}
-
-.timeline-item:before {
-    content: attr(data-dates);
-    position: absolute;
-    left: 2.5em;
-    top: 2em;
-    display: block;
-    font-weight: 600;
-    font-size: 0.8em;
-    padding: 0;
-    margin: 0;
-
-}
-
-.timeline-item:after {
-    width: 12px;
-    height: 12px;
-    display: block;
-    top: 30px;
-    position: absolute;
-    left: -6px;
-    border-radius: 12px;
-    content: '';
-    background: #3b3b38;
-}
-
-.history-items {
-    margin-bottom: 30px;
-}
-
-/* ------------------------------------ skill section */
-.skill {
-    text-align: center;
-    display: inline-block;
-    padding: 20px;
-}
-
-img {
-    width: 80px;
-    height: 80px;
-}
-
-/* ----------------------------------- Portfolio section */
-
-.portfolio {
-    text-align: center;
-    display: inline-block;
-    padding: 20px;
-    margin: 20px 20%;
-}
-
-.portfolio> img {
-    width: 350px;
-    height: 228px;
-
 }
